<resources>
    <string name="app_name">ScreenSaver</string>
    <string name="museum_name">メトロポリタン美術館</string>
    <string name="art_detail_download">ダウンロード</string>

    // 検索ワード
    <string name="search_word_Europe">Europe</string>
    <string name="search_word_France">France</string>
    <string name="search_word_Italy">Italy</string>
    <string name="search_word_China">China</string>
    <string name="search_word_NewYork">NewYork</string>
    <string name="search_word_Japan">Japan</string>
    <string name="search_word_Ceramic">Ceramic</string>
    <string name="search_word_Furniture">Furniture</string>
    <string name="search_word_Paintings">Paintings</string>
    <string name="search_word_Sculpture">Sculpture</string>
    <string name="search_word_Textiles">Textiles</string>

    //　SearchBar
    <string name="search_bar_hint">検索</string>

    // bottom navigation title
    <string name="nav_title_dream">スクリーンセイバー</string>
    <string name="nav_title_image">写真</string>
    <string name="nav_title_metron_mus">美術館</string>

    // toolBar
    <string name="toolbar_setting">設定</string>

    // setting
    <string name="pref_screen_saver">スクリーンセイバー設定</string>
    <string name="pref_interactive">Interactive</string>
    <string name="pref_full_screen">FullScreen</string>
    <string name="pref_screen_bright">ScreenBright</string>

    // preference
    <string name="pref_key_interactive">interactive</string>
    <string name="pref_key_fullscreen">fullscreen</string>
    <string name="pref_key_screen_bright">screen_bright</string>
    <string name="pref_interactive_description">タップされても閉じるか設定</string>
    <string name="pref_full_screen_description">フルスクリーンモードであるか設定</string>
    <string name="pref_screen_bright_description">画面を明るく保つか設定</string>

</resources>